Fixed bugs: Split navbar on mobile to have right and left sections. Add icons to mobile navbar. Move hint into incorrect modal. In Question Ordering, if a string is too long it goes out of scope of the box - check other question types. Change the prompts in feedback: Feedback for the course instructor, feedback for the developers of quizzard. Fix the visibility snackbar colour.

--- a/public/css/question.css
+++ b/public/css/question.css
@@ -58,3 +58,7 @@
   padding-top: 5px;
   font-size: 16px;
 }
+
+#hint{
+  font-size: 1.64rem;
+}
